--- a/estilo.css
+++ b/estilo.css
@@ -73,15 +73,13 @@ footer{
 
 section> a{
     color: white;
-    border-radius: 2px ;
-    padding:20px ;
-    font-weight:200 ;
+    border-radius: 2px;
+    padding:20px;
+    font-weight:200;
     background-color: black;
-    position: absolute;
-    bottom: 20px;
-    left: 195px;
     text-decoration: none;
     font-size: 25px;
+    margin-top: 20px;
 }
 
 header a{ 
@@ -96,16 +94,19 @@ header a{
 section {
     font-size: 40px;
     color: black;
-    padding-left: 100px;
-    padding-top: 100px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 
 }
 
 main p{
     font-weight: bolder;
     font-size: 15px;
-
 }
+
 #btnc{
     background-color: #42AFDE;
     color: white;
