--- a/login.css
+++ b/login.css
@@ -14,7 +14,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100%;
+    grid-template-rows: 80vh, 20vh;
     grid-template-areas:
         "c h"
         "r r";
@@ -46,7 +46,7 @@ header {
 
  }
 
-main {
+ main {
     grid-area: c;
     padding: 40px;
     display: flex;
@@ -80,6 +80,7 @@ main {
 form {
     display: flex;
     flex-direction: column;
+    background-color: antiquewhite;
 }
 
 form > input {
@@ -110,4 +111,11 @@ footer{
     width: 100%;
     position: absolute;
     bottom: 0;
+    top: 80%;
+}
+
+footer > img{
+    width: 100%;
+    height: 100%;
+    
 }
